--- a/webroot/css/styleOptions.css
+++ b/webroot/css/styleOptions.css
@@ -56,7 +56,7 @@ form input[type="button"], form input[type="submit"]{
     background-color:#000;
 } 
 
-form input[name="eliminar"]{
+form input[name="eliminar"],  form input[name="inhabilitar"]{
     background-color:red;
 }
 form input[name="editar"]{
